
*Examples / Guide*

The plugin development process documentation has been enhanced.

* link:{{< relref "plugin-development" >}}[Plugin Development]
* link:https://github.com/gentics/mesh-plugin-examples[Plugin Examples]
* link:{{< relref "guides/mesh-plugin" >}}[Example Plugin Guide]

____


[[v0.36.8]]
== 0.36.8 (02.08.2019)

icon:check[] Core: Fixed a bug that caused node contents to not be found when migrating from an old version of Gentics Mesh (0.22.x) to the current version.

[[v0.36.7]]
== 0.36.7 (23.07.2019)

icon:check[] Backup: Fixed a bug in the backup handler which prevented the backup process to switch back to the correct status after a backup failed due to filesystem errors.

icon:plus[] Java Rest Client: Added `#equals` and `#hashCode` implementations to REST models.

icon:plus[] Graph: It is now possible to configure the OrientDB `RID_BAG_EMBEDDED_TO_SBTREEBONSAI_THRESHOLD` setting by adding the `ridBag.embeddedToSbtreeBonsaiThreshold` parameter to the the `storage.parameters` field.

icon:plus[] REST: An error will now be returned when sending the `newPassword` field in the login request when the `forcedPasswordChange` flag has not been set.

icon:plus[] Core: The core Vert.x library was updated to version `3.8.0`.

icon:plus[] REST: The webroot responses will now contain the header `Webroot-Node-Uuid` which identifies the node of the loaded content.

icon:plus[] REST: The authentication and element loading performance has been greatly increased.

[[v0.36.6]]
== 0.36.6 (16.07.2019)

icon:plus[] REST: The performance of path resolving has been improved.

icon:plus[] Core: A new configuration section has been added. The `cache` options in the `mesh.yml` can now be used to control cache settings. The `cache.pathCacheSize` config setting and `MESH_CACHE_PATH_SIZE` environment variable can be used to control the path cache which will improve webroot and GraphQL path resolving performance.
